# aicore

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.aicore/: system-ledger.md
.aicore/history/checkpoints/task-2026-05-29-claude-wrapper-mvp/checkpoint-20260529110651950049-ec9cdaf5/: manifest.json
.aicore/history/events/: event-20260529110645062460-364781a1.json  event-20260529114309225882-7ababe19.json  event-20260530063206193109-e421b4aa.json
.claude/commands/: aicore-checkpoint.md  aicore-contract.md  aicore-ledger.md  aicore-log-write.md  aicore-save.md  aicore-start.md
.claude/hooks/: aicore_save_reminder.py
aicore/: __init__.py  __main__.py
docs/contracts/: vibe-coding-contract.md
docs/superpowers/plans/: 2026-05-24-sop-executor-task-launcher-implementation-plan.md  2026-05-25-execution-safety-layer-mvp.md  2026-05-29-claude-code-wrapper-mvp.md
docs/superpowers/specs/: 2026-05-24-sop-executor-task-launcher-design.md  2026-05-25-execution-safety-layer-design.md  2026-05-29-claude-code-wrapper-design.md
src/aicore/: cli.py  draft_builder.py  history_service.py  history_store.py  ledger_service.py  state_machine.py  task_contract_service.py  task_query_service.py  task_service.py  task_store.py  task_update_service.py  task_views.py
tests/: conftest.py  test_claude_wrapper_files.py  test_cli_smoke.py  test_history_commands.py  test_ledger_commands.py  test_start_command.py  test_state_commands.py  test_supersedes_flow.py  test_task_query_commands.py  test_task_store.py  test_task_update_commands.py
(+16 files in other folders)
